fix: horizontal scrolling for screenshots

--- a/src/app/_sections/HeroSection/index.module.scss
+++ b/src/app/_sections/HeroSection/index.module.scss
@@ -233,7 +233,7 @@
 }
 .contactCard {
   padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
+  border-radius: $large-br;
   background: rgba(var(--card-rgb), 0);
   border: 1px solid rgba(var(--card-border-rgb), 0);
   min-width: 280px;
